# MetaInformAnt

./: .Rprofile  .bashrc_r_tmp  .coverage  .cursorrules  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  =0.5.3  =1.1.0  AGENTS.md  AUDIT_INDEX.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_UV_SETUP_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_EXECUTIVE_SUMMARY.md  Dockerfile  FINAL_TEST_SUMMARY.md  GWAS_VALIDATION_REPORT.md  LICENSE  LINK_VALIDATION_REPORT.md  PAI.md  PHARMACOGENOMICS_VALIDATION_REPORT.md  PLACEHOLDER_FILES_AUDIT.md  QUICKSTART.md  README.md  RNA_MODULE_IMPROVEMENTS.md  SINGLECELL_VALIDATION_REPORT.md  SPEC.md  TODO.md  blue  check_core_doc_consistency.py  check_numpy.py  config_help.txt  cross_code_verification_report.md  fastq_samples.txt  gwas_verification_script.py  link_validation_report.json  (+28 more)
AntWiki/: ncbi_dataset_final_01.json  scrape_antwiki.py  scrape_ncbi.py
Genome/: docker-compose.yml  requirements.txt  useful_commands
Other_and_notes/: 2_getfastq.sh  5_curate.sh
Plans/: distributed-petting-hippo.md
Proteome/: download_species_proteomes.py  proteome_lengths.py  taxon_id_list.txt
Transcriptome/: 1_1_split_metadata.py  1_download_genome.py  1_metadata.py  1_metadata.sh  2.5_update_metadata.py  2_get_metadata.py  2_parallel_download.py  3_parallel_download.py  3_quant.sh  4_quant.py  5_curate.py  README.md  README.txt
config/: AGENTS.md  PAI.md  README.md  SPEC.md  amalgkit_amellifera.yaml  amalgkit_cfloridanus.yaml  amalgkit_mpharaonis.yaml  amalgkit_pbarbatus.yaml  amalgkit_pbarbatus_direct.yaml  amalgkit_pbarbatus_limited.yaml  amalgkit_pbarbatus_manual.yaml  amalgkit_pbarbatus_multi8.yaml  amalgkit_pbarbatus_simple.yaml  amalgkit_pbarbatus_test.yaml  amalgkit_pbarbatus_unannotated_tissues_included.yaml  amalgkit_sinvicta.yaml  amalgkit_template.yaml  multiomics_template.yaml  ncbi.yaml  networks_template.yaml  singlecell_template.yaml
cursorrules/: AGENTS.md  README.md  SPEC.md  core.cursorrules  dna.cursorrules  ecology.cursorrules  epigenome.cursorrules  gwas.cursorrules  information.cursorrules  life_events.cursorrules  longread.cursorrules  math.cursorrules  menu.cursorrules  metabolomics.cursorrules  metagenomics.cursorrules  ml.cursorrules  multiomics.cursorrules  networks.cursorrules  ontology.cursorrules  pharmacogenomics.cursorrules  phenotype.cursorrules  protein.cursorrules  quality.cursorrules  rna.cursorrules  simulation.cursorrules  singlecell.cursorrules  spatial.cursorrules  structural_variants.cursorrules  visualization.cursorrules
docs/: AGENTS.md  COMPARISON_GUIDES.md  COMPREHENSIVE_REVIEW_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  DISK_SPACE_MANAGEMENT.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_IMPROVEMENT_PLAN.md  DOCUMENTATION_REVIEW_2025.md  DOCUMENTATION_VERIFICATION_REPORT.md  ERROR_HANDLING.md  FAQ.md  FINAL_CLEANUP_SUMMARY.md  GETTING_STARTED.md  INTEGRATION.md  LINUX_TRANSFER.md  NO_MOCKING_POLICY.md  ORCHESTRATION.md  PAI.md  README.md  REAL_IMPLEMENTATION_POLICY.md  REPOSITORY_AUDIT_REPORT.md  SETUP.md  SPEC.md  TESTING_SETUP_GUIDE.md  TEST_SUITE_ASSESSMENT.md  TEST_SUITE_STATUS.md  TROUBLESHOOTING.md  TUTORIALS.md  UV_SETUP.md  architecture.md  cli.md  comprehensive_review_report.md  comprehensive_test_analysis.md  conf.py  core.md  documentation_audit.md  documentation_review_report.md  index.md  (+4 more)
examples/: AGENTS.md  BEST_PRACTICES.md  COMPARISON_GUIDE.md  DEPENDENCIES.md  PAI.md  README.md  SPEC.md  TROUBLESHOOTING.md  dependencies.json
fasterq.tmp.parrot.24637/: SRR000001.parrot.24637.0000.4  SRR000001.parrot.24637.0001.4
output/: .cursorrules  24_threads_confirmation.txt  AGENTS.md  COMPREHENSIVE_WORKFLOW_LAUNCHED.md  ENA_WORKFLOW_IMPLEMENTATION_SUMMARY.md  FASTQ_EXTRACTION_FIX_SUMMARY.md  FASTQ_EXTRACTION_IMPROVEMENTS_SUMMARY.md  FINAL_TEST_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_REPORT.md  MULTI_SPECIES_EXECUTION_PLAN.md  MULTI_SPECIES_WORKFLOW_STATUS.md  PROGRESS_TRACKING_TEST_REPORT.md  README.md  REVIEW_2025.md  all_fixes_complete.md  amalgkit_status_report_20251031.md  audit_docstring_report.json  audit_summary_report.md  complete_pipeline_execution_report_20251103.md  comprehensive_fixes_complete.md  comprehensive_fixes_summary.md  comprehensive_repository_review.md  comprehensive_system_review_20251103.md  coverage.xml  documentation_cleanup_summary.md  end_to_end_validation_report.txt  end_to_end_workflow_confirmation.txt  final_comprehensive_status.md  final_status_summary.md  genome_download_results.json  genome_index_status.json  genome_index_status_final.json  getfastq_upstream.py  kallisto_index_build_results.json  multi_species_workflow_review.md  population_genetics_confirmation_report.md  population_genetics_improvements_summary.md  population_genetics_review_report.md  progress_state.json  (+38 more)
postgres/: Dockerfile  init-db.sh  init.sql
projects/: apis_gwas  drosophila_scrna_2026
projects/template_bioinformatics_project/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  main.py  pyproject.toml  requirements.txt  run.sh
projects/template_bioinformatics_project/.github/workflows/: ci.yml
projects/template_bioinformatics_project/config/: default.yaml  samples.tsv
projects/template_bioinformatics_project/doc/: architecture.md  configuration.md  data.md  index.md
projects/template_bioinformatics_project/doc/stages/: 01_process_data.md  02_analyze_results.md  03_visualize.md  99_synthetic_data.md
projects/template_bioinformatics_project/scripts/: 01_process_data.py  02_analyze_results.py  03_visualize.py  99_create_synthetic_data.py
projects/template_bioinformatics_project/tests/: conftest.py  test_pipeline.py
scripts/: AGENTS.md  PAI.md  README.md  SPEC.md  _template_working.py  analyze_example_coverage.py  audit_docs.py  audit_docstrings.py  audit_repo.py  benchmark_examples.py  benchmark_performance.py  check_example_dependencies.py  check_exports.py  core_docs_cross_check.py  debug_size.py  download_real_honeybee_variants.py  fix_mermaid_violations.py  fix_test_imports.py  (+27 more)
(+38944 files in other folders)
