[project]
name = "metainformant"
version = "0.1.0"
description = "Integrated multi-omic biological systems modeling toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "METAINFORMANT Team" }
]

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

dependencies = [
  # Core scientific stack
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",

  # Bioinformatics
  "biopython>=1.79",
  "pyfaidx>=0.6.4",
  "goatools>=1.2.6",
  "ete3>=3.1.3",

  # Networking and I/O
  "requests>=2.31",
  "urllib3==1.26.18",
  "jsonlines>=3.0.0",
  # Config formats
  "PyYAML>=6.0",

  # NCBI datasets
  "ncbi-datasets-pylib==13.8.0",
  "protobuf==3.19.4",

  # DB client (optional; required for DNA DB writes)
  "psycopg2-binary>=2.9",

  # Visualization helpers
  "scikit-learn>=1.3",
  "scipy>=1.11",

  # Scraping
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "pyyaml>=6.0.1",
]

[project.scripts]
metainformant = "metainformant.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=24.3.0",
  "ruff>=0.4.8",
  "mypy>=1.10.0",
  "ipykernel>=6.29",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = false

[tool.uv]
index-url = "https://pypi.org/simple"
dev-dependencies = ["metainformant[dev]"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


